--- a/www/css/menu.css
+++ b/www/css/menu.css
@@ -88,7 +88,7 @@ body
     margin-top: 50px;
     text-align: center;
     border-bottom: 2px solid black;
-    font-size: 300%;
+    font-size: 500%;
     font-family: AmaticSC;
 }
 
@@ -100,16 +100,19 @@ body
 #drinksDiv
 {
     font-size: 200%;
+    overflow: auto;
 }
 
 #warmDrinksDiv
 {
     font-size: 200%;
+    overflow: auto;
 }
 
 #dessertsDiv
 {
     font-size: 200%;
+    overflow: auto;
 }
 
 #nonDishTitle
@@ -120,7 +123,7 @@ body
     padding-bottom: 3.5%;
     margin: 0;
     margin-top: 15px;
-    font-size: 40px;
+    font-size: 150%;
     float: left;
     position: relative;
     top: 0px;
