--- a/www/css/summary.css
+++ b/www/css/summary.css
@@ -1,6 +1,6 @@
 #headerBestallning
 {
-    font-size: 800%;
+    font-size: 1100%;
 }
 
 #orderSummary
